syntax = "proto3";

package proto;

option go_package = "github.com/clintjedwards/basecoat/proto";

import "basecoat_transport.proto";

service Basecoat {
  // System endpoints
  rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse);

  // Organization routes (Admin only)
  rpc ListOrganizations(ListOrganizationsRequest)
      returns (ListOrganizationsResponse);
  rpc CreateOrganization(CreateOrganizationRequest)
      returns (CreateOrganizationResponse);
  rpc DescribeOrganization(DescribeOrganizationRequest)
      returns (DescribeOrganizationResponse);

  // Account routes (Admin only)
  //  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  //   rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
  //   rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse);
  //   rpc DisableAccount(DisableAccountRequest) returns
  //   (DisableAccountResponse);
}
